@@ -4,6 +4,8 @@
 - Fixed issue #16194: Files displayed URL encoded in WebDAV clients.
 - Fixed issue #16201: Introduced new Nautilus compatible transport class to
   fix client specific issues.
+- Fixed issue #16034: The permissions on the lock file in ezcWebdavFileBackend
+  are now properly checked before a lock is acquired.
 
 1.1.3 - Monday 09 November 2009
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
